force-app/main/default/objects/Activity/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <label>Event Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Luncheon</fullName>
            </value>
            <value>
                <fullName>Artability</fullName>
            </value>
            <value>
                <fullName>CAC</fullName>
            </value>
            <value>
                <fullName>Changing Minds Tour</fullName>
            </value>
            <value>
                <fullName>Fashion Fighting Stigma</fullName>
            </value>
            <value>
                <fullName>Gala</fullName>
            </value>
            <value>
                <fullName>Gratitude</fullName>
            </value>
            <value>
                <fullName>Postage</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>Social Bash</fullName>
            </value>
            <value>
                <fullName>Training Institute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>