force-app/main/default/objects/Activity/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>