force-app/main/default/objects/Activity/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Identification</fullName>
            </value>
            <value>
                <fullName>2 - Qualification</fullName>
            </value>
            <value>
                <fullName>3 - Cultivation</fullName>
            </value>
            <value>
                <fullName>4 - Solicitation</fullName>
            </value>
            <value>
                <fullName>5 - Stewardship</fullName>
            </value>
            <value>
                <fullName>6 - Changing Minds Tour</fullName>
            </value>
            <value>
                <fullName>7 - Board Interaction</fullName>
            </value>
            <value>
                <fullName>8 - Volunteer Engagement</fullName>
            </value>
            <value>
                <fullName>9 - Report/Final Report</fullName>
            </value>
            <value>
                <fullName>10 - Legislative Visit</fullName>
            </value>
            <value>
                <fullName>11 - Visibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>